--- a/usergroup.html
+++ b/usergroup.html
@@ -18,6 +18,8 @@
 <link rel="preload" crossorigin as="style" type="text/css" href="/pages/www/css/cls_chroma.css">
 <link rel="stylesheet" type="text/css" href="/pages/www/css/cls_chroma.css">
 <script defer src="/pages/www/js/do_aatext.js"></script>
+<link rel="stylesheet" type="text/css" href="/pages/www/css/cls_ccopy.css">
+<script defer src="/pages/www/js/do_ccopy.js"></script>
 <link rel="preload" crossorigin as="style" type="text/css" href="/pages/www/css/cat_ui.css">
 <link rel="stylesheet" type="text/css" href="/pages/www/css/cat_ui.css">
 <script defer src="/pages/www/lib/d3-dsv@3/d3-dsv.min.js"></script>
@@ -39,68 +41,68 @@
 <div id="contents" class="contents">
 <h1 id="ユーザ名とグループ名が一致する理由">ユーザ名とグループ名が一致する理由</h1>
 <p>おはようございます。こんにちは。こんばんは。ふぇにっくちゅん です。</p>
-<p>この記事に到達したということは「<a href="./tmplview.html" rel="nofollow">リッチな Markdown 描画アプリの解説するよ</a>」の記事で、疑問を持った方だと思います。<br/>
+<p>この記事に到達したということは「<a href="./tmplview.html">リッチな Markdown 描画アプリの解説するよ</a>」の記事で、疑問を持った方だと思います。<br />
 <em>usermap.conf</em> に 「userA:userA」という不思議な記述があり、困惑したのではないでしょうか？</p>
-<p>本記事は、この疑問を解決するための解説記事です。<br/>
-まず、拡張版 Markdown アプリである cat_tmplview は、ユーザやグループの単位で、動的に表示内容を切り替えるアプリです。<br/>
+<p>本記事は、この疑問を解決するための解説記事です。<br />
+まず、拡張版 Markdown アプリである cat_tmplview は、ユーザやグループの単位で、動的に表示内容を切り替えるアプリです。<br />
 このアプリの機能を正確に説明すると、実は「指定されたグループに属するユーザであれば、表示する機能」です。</p>
-<p>つまり、ユーザ単位で動的に表示内容を切り替える機能はありません。<br/>
+<p>つまり、ユーザ単位で動的に表示内容を切り替える機能はありません。<br />
 まずはこのことを抑えた上で、解説を進めていきます。</p>
 <h2 id="グループとは">グループとは</h2>
-<p>皆さんは「グループ」というと、集団や複数何かが属しているイメージをパット思い浮かべるかもしれません。<br/>
-ですが、「一人グループ」という言葉は聞いたことがあるでしょうか？<br/>
+<p>皆さんは「グループ」というと、集団や複数何かが属しているイメージをパット思い浮かべるかもしれません。<br />
+ですが、「一人グループ」という言葉は聞いたことがあるでしょうか？<br />
 つまり、グループというのは一人であっても、いいのです。</p>
-<p>実装的な話をすると、ユーザとグループという2種類の属性を扱う処理は複雑になります。<br/>
+<p>実装的な話をすると、ユーザとグループという2種類の属性を扱う処理は複雑になります。<br />
 つまり「グループ名＝ユーザ名」と表現できれば、グループという属性だけを処理すれば良いことになります。</p>
-<p>要するに、アプリは「グループ」だけを処理するシンプルな機能とすることができます。<br/>
+<p>要するに、アプリは「グループ」だけを処理するシンプルな機能とすることができます。<br />
 その上で、ユーザ単位でもグループ単位でも同じ処理（動的に表示内容を切り替える）が実現できます。</p>
 <h2 id="機能をシンプルにするメリット">機能をシンプルにするメリット</h2>
-<p>もう既に、メリットは感じ取ってもらえたのではないでしょうか？<br/>
-しかし、先述した内容は実装者が楽になるメリットです。<br/>
+<p>もう既に、メリットは感じ取ってもらえたのではないでしょうか？<br />
+しかし、先述した内容は実装者が楽になるメリットです。<br />
 今度は少し視点を変えて、<em>usermap.conf</em> を管理する管理者の視点でメリットを解説します。</p>
-<p><em>usermap.conf</em> を管理する人が困ることは何でしょうか？<br/>
-それは、ユーザが何らかの理由でいなくなった場合です。<br/>
+<p><em>usermap.conf</em> を管理する人が困ることは何でしょうか？<br />
+それは、ユーザが何らかの理由でいなくなった場合です。<br />
 社会人用語的には、異動・退職 という言葉を使ったりします。</p>
-<p>そのときに、<em>usermap.conf</em> から対象のユーザ行を削除すれば良いです。<br/>
-ですが、先程の記事で説明したとおり、Markdown ファイルと <em>usermap.conf</em> は連携しています。<br/>
+<p>そのときに、<em>usermap.conf</em> から対象のユーザ行を削除すれば良いです。<br />
+ですが、先程の記事で説明したとおり、Markdown ファイルと <em>usermap.conf</em> は連携しています。<br />
 このときに、Markdown ファイルからも対象ユーザに関係する文章やパラグラフを削除したいでしょうか？</p>
-<p>小規模なコンテンツしか扱わない場合には、削除の手間はそこまでないかもしれません。<br/>
-しかし、大規模になればなるほど、削除の手間も肥大化します。<br/>
+<p>小規模なコンテンツしか扱わない場合には、削除の手間はそこまでないかもしれません。<br />
+しかし、大規模になればなるほど、削除の手間も肥大化します。<br />
 これでは、管理者はやっていられません。</p>
-<p>これを解決するには、ユーザ単位という扱いをやめ、グループ単位のみで表示内容を制御するほうが良いです。<br/>
-たとえば、AさんとBさんがサイトのコンテンツを作成していたとします。<br/>
-そのときに、「userA:userA」、「userB:userB」とするのではなく、以下のような <em>usermap.conf</em> にします。<br/>
+<p>これを解決するには、ユーザ単位という扱いをやめ、グループ単位のみで表示内容を制御するほうが良いです。<br />
+たとえば、AさんとBさんがサイトのコンテンツを作成していたとします。<br />
+そのときに、「userA:userA」、「userB:userB」とするのではなく、以下のような <em>usermap.conf</em> にします。<br />
 また、ユーザ名とグループ名がかぶらないように、<em>usermap_config.conf</em> も記載しておきます。</p>
-<p><img src="./IMGs/usergroup1.png" alt="usermap-lec"/></p>
-<p><img src="./IMGs/usergroup2.png" alt="usermap-config-lec"/></p>
-<p>実は、このケースでは、userAグループであろうがOWNERグループであろうが、Aさん的には変わりません。<br/>
+<p><img src="./IMGs/usergroup1.png" alt="usermap-lec" /></p>
+<p><img src="./IMGs/usergroup2.png" alt="usermap-config-lec" /></p>
+<p>実は、このケースでは、userAグループであろうがOWNERグループであろうが、Aさん的には変わりません。<br />
 Bさんも同様です。</p>
-<p>このようにしておけば、Aさん が何らかの理由で退職されたときでも、<em>usermap.conf</em> の Aさん の行を削除するだけで良くなります。<br/>
-Markdown ファイルから Aさん の関係する文章を削除しなくてよいのは、Aさん のために記述した内容ではなく、OWNER として閲覧が必要な文章であるからです。<br/>
+<p>このようにしておけば、Aさん が何らかの理由で退職されたときでも、<em>usermap.conf</em> の Aさん の行を削除するだけで良くなります。<br />
+Markdown ファイルから Aさん の関係する文章を削除しなくてよいのは、Aさん のために記述した内容ではなく、OWNER として閲覧が必要な文章であるからです。<br />
 つまり、後に OWNER となる Cさん が現れるかもしれないのです。</p>
-<p>一方で、OWNER ではなく「userA:userA」という <em>usermap.conf</em> であった場合には、これは明示的に Aさん 個人のために記述した内容ということを示しています。<br/>
-このケースでは、たとえ Cさん が新たに現れたとしても、Aさん 個人のための文章やパラグラフを Cさん に見せることができません。<br/>
+<p>一方で、OWNER ではなく「userA:userA」という <em>usermap.conf</em> であった場合には、これは明示的に Aさん 個人のために記述した内容ということを示しています。<br />
+このケースでは、たとえ Cさん が新たに現れたとしても、Aさん 個人のための文章やパラグラフを Cさん に見せることができません。<br />
 漏洩事故を防ぐためにも、Markdown 上からは Aさん に依存した文章は削除する必要があります。</p>
 <p>つまり、ある程度大規模なサイトとして cats_dogs を運用する場合は、ユーザに依存した <em>usermap.conf</em> の決定は避けるほうが良いことになります。</p>
-<p>cats_dogs を利用する場合、サイトの規模感、サイト間のドキュメント移行などを考慮し、<em>usermap.conf</em> をどのように扱うかを設計するとうまくいきます。<br/>
-勘違いしてはいけないのは、個人に依存する <em>usermap.conf</em> が悪ではないということです。<br/>
-あくまでも上記は一例であり、cats_dogs の活用は、個人で扱う場合もあれば、短期的に利用する場合もあります。<br/>
-そのようなときには、個人に依存した「userA:userA」でも良いと思います。<br/>
+<p>cats_dogs を利用する場合、サイトの規模感、サイト間のドキュメント移行などを考慮し、<em>usermap.conf</em> をどのように扱うかを設計するとうまくいきます。<br />
+勘違いしてはいけないのは、個人に依存する <em>usermap.conf</em> が悪ではないということです。<br />
+あくまでも上記は一例であり、cats_dogs の活用は、個人で扱う場合もあれば、短期的に利用する場合もあります。<br />
+そのようなときには、個人に依存した「userA:userA」でも良いと思います。<br />
 つまりは、状況に応じて選択することが大切ということです。</p>
 <p>この節では、グループ単位のみで扱うことで運用面にメリットが発生することを紹介しました。</p>
 <h2 id="さいごに">さいごに</h2>
-<p>グループ名にユーザ名を利用する疑問は解けたでしょうか？<br/>
-すこしトンチが効いた内容だったかもしれません。<br/>
-「<a href="https://eng-blog.iij.ad.jp/archives/18747" rel="nofollow noreferrer">GitHub から Markdown だけ切除してみた</a>」の記事の冒頭で、</p>
+<p>グループ名にユーザ名を利用する疑問は解けたでしょうか？<br />
+すこしトンチが効いた内容だったかもしれません。<br />
+「<a href="https://eng-blog.iij.ad.jp/archives/18747">GitHub から Markdown だけ切除してみた</a>」の記事の冒頭で、</p>
 <blockquote>
 <p>この cats_dogs は単なる Markdown ビューアではありません。</p>
 </blockquote>
-<p>と紹介したように、単なる Markdown ビューアではなく、細かいところに色々な工夫が隠れています。<br/>
+<p>と紹介したように、単なる Markdown ビューアではなく、細かいところに色々な工夫が隠れています。<br />
 では、引き続き cats_dogs を楽しんでください。</p>
 </div>
 <div class="footer">
 <hr/>
-<center><a href="https://github.com/1f408/cats_dogs">Made by cats_dogs system.</a></center>
+<center><a href="https://1f408.github.io/pages/">Top</a></center>
 </div>
 </body>
 </html>
